# Cpp_build_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
install_test_ci_fix/include/plugin_segfault/: plugin_segfault.h
plugin/: CMakeLists.txt
plugin/src/: plugin.cpp
plugin_segfault/: CMakeLists.txt
plugin_segfault/src/: plugin_segfault.cpp
scripts/: clang-tidy.sh  format.sh  lint.sh
tests/: CMakeLists.txt  segfault_probe.cpp  test_plugin.cpp  test_plugin_segfault.cpp
